--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>nanojson</artifactId>
     <packaging>jar</packaging>
     <name>nanojson</name>
-    <version>1.5-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -143,6 +143,7 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
+                    <excludes>**/module-info.java</excludes>
                     <configLocation>checkstyle.xml</configLocation>
                     <propertyExpansion>basedir=${basedir}</propertyExpansion>
                     <includeTestSourceDirectory>true</includeTestSourceDirectory>
@@ -193,8 +194,9 @@
                 <configuration>
                     <debug>true</debug>
                     <debuglevel>none</debuglevel>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>11</source>
+                    <target>11</target>
+                    <release>11</release>
                     <archive>
                         <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
                     </archive>
@@ -211,17 +213,6 @@
                 <configuration>
                 </configuration>
             </plugin>
-	<plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-jar-plugin</artifactId>
-		<configuration>
-			<archive>
-				<manifestEntries>
-					<Automatic-Module-Name>com.grack.nanojson</Automatic-Module-Name>
-				</manifestEntries>
-			</archive>
-		</configuration>
-	</plugin>
         </plugins>
     </build>
 
